adding more functionality

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,32 @@ nav a.active{
     color: var(--white-color);
     cursor: pointer;
 }
+
+section{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 10rem 9% 2rem;
+    background-color: var(--bg-color);
+}
+
+.home{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+}
+
+.home-detail h1{
+    font-size: clamp(3.5rem, 10vw, 5.5rem);
+}
+
+.home-detail h2{
+    display: inline-block;
+    font-size: 3rem;
+    margin-top: -1rem;
+}
+
+.home-detail p{
+    font-size: 1.6rem;
+    margin-top: 1rem 0 2.5rem;
+}
