--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,12 @@ section{
 .home{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 5rem;
+}
+
+.home-detail{
+    padding-right: 10rem;
 }
 
 .home-detail h1{
@@ -91,7 +96,6 @@ section{
 .home-detail p{
     font-size: 1.6rem;
     margin-top: 2rem 0 2.5rem;
-    margin-top: 10px;
 }
 
 .home-detail .btn-sci{
@@ -138,4 +142,64 @@ section{
     background-color: var(--secondary-color);
     color: var(--bg-color);
     box-shadow: 0 0 1rem var(--secondary-color);
+}
+
+.home-img {
+    margin-left: 75rem;
+    margin-top: -35rem;
+}
+
+.home-img .img-box{
+    position: relative;
+    width: 32vw;
+    height: 32vw;
+    border-radius: 50%;
+    padding: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.home-img .img-box::before{
+    content: "";
+    position: absolute;
+    width: 50rem;
+    height: 50rem;
+    background: conic-gradient(transparent, transparent, transparent, var(--secondary-color));
+    transform: rotate(0deg);
+    z-index: 1;
+    animation: rotate-border 5s linear infinite;
+}
+
+.home-img .img-box::after{
+    animation: -5s;
+}
+
+@keyframes rotate-border{
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+.home-img .img-box .img-item{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: var(--bg-color);
+    border: .01rem solid var(--bg-color);
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.home-img .img-box .img-item img{
+    position: absolute;
+    top: 3rem;
+    display: block;
+    width: 135%;
+    object-fit: cover;
+    mix-blend-mode: lighten;
 }
