--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ section{
 .btn{
     display: inline-block;
     padding: 1rem 3rem;
-    background: var(--secondary-color);
+    background: rgb(6, 78, 212);
     border: .2rem solid var(--secondary-color);
     border-radius: 4.5rem;
     font-size: 1.6rem;
@@ -197,9 +197,12 @@ section{
 
 .home-img .img-box .img-item img{
     position: absolute;
-    top: 3rem;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
     display: block;
-    width: 135%;
+    width: 155%;
     object-fit: cover;
     mix-blend-mode: lighten;
 }
