--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,10 @@ section.active {
     transform: rotate(225deg);
 }
 
+.services-box .icon a:hover i {
+    transform: rotate(180deg);
+}
+
 .services-box h3 {
     font-size: 3rem;
     margin: 0.5rem 0 2rem;
@@ -320,4 +324,45 @@ section.active {
 
 .services-box p {
     font-size: 1rem;
+}
+
+.resume-container {
+    display: grid;
+    grid-template-columns: 1fr, 2fr;
+    gap: 5rem;
+}
+
+.resume-container h2 {
+    font-size: 4.5rem;
+}
+
+.resume-container p{
+    font-size: 1.6rem;
+}
+
+.resume-container .desc {
+    margin: 2rem 0 2.5rem;
+}
+
+.resume-container .resume-btn {
+    width: 100%;
+    height: 5rem;
+    background: var(--main-color);
+    border: 0.2rem solid var(--second-bg-color);
+    font-size: 1.6rem;
+    color: var(--white-color);
+    font-weight: 500;
+    margin-bottom: 2rem;
+    border-radius: .8rem;
+    cursor: pointer;
+}
+
+.resume-container .resume-btn.active {
+    border-color: var(--secondary-color);
+    color: var(--secondary-color);
+}
+
+.resume-box .resume-detail p {
+    font-size: 1.4rem;
+    margin: 1rem 0;
 }
