--- a/css/styles.css
+++ b/css/styles.css
@@ -381,3 +381,44 @@ section.active {
     text-align: left;
 }
 
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px var(--secondary-color);
+}
+
+.skill-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 120px;
+    height: 130px;
+    background: var(--bg-color);
+    border-radius: 10px;
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px;
+    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+    transition: transform 0.3s;
+}
+
+.skill-item:hover {
+    transform: translateY(-5px);
+}
+
+.skill-item i {
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.skill-item span {
+    font-size: 16px;
+    font-weight: 500;
+}
