--- a/css/styles.css
+++ b/css/styles.css
@@ -381,6 +381,24 @@ section.active {
     text-align: left;
 }
 
+.resume-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
+    height: 65rem;
+    overflow: auto;
+}
+
+.resume-list .resume-item{
+    background: var(--main-color);
+    border-radius: .8rem;
+    padding: 3rem 2.5rem;
+    height: calc((75rem - 2rem) / 2);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .skills-container {
     display: flex;
     flex-wrap: wrap;
