--- a/css/styles.css
+++ b/css/styles.css
@@ -389,14 +389,57 @@ section.active {
     overflow: auto;
 }
 
+.resume-list::-webkit-scrollbar{
+    width: 0.8rem;
+}
+
+.resume-list::-webkit-scrollbar-thumb{
+    background: transparent;
+    border-radius: 1rem;
+}
+
+.resume-list:hover::-webkit-scrollbar-thumb{
+    background: var(--secondary-color);
+    border-radius: 1rem;
+}
+
 .resume-list .resume-item{
     background: var(--main-color);
     border-radius: .8rem;
     padding: 3rem 2.5rem;
-    height: calc((75rem - 2rem) / 2);
+    height: calc((79rem - 2rem) / 2);
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.resume-item .year{
+    font-size: 1.6rem;
+    color: var(--secondary-color);
+}
+
+.resume-item h3{
+    font-size: 1.7rem;
+    margin: 1rem 0;
+}
+
+.resume-item .company{
+    position: relative;
+    font-size: 1.4rem;
+    margin-left: 1.6rem;
+    margin-bottom: 1.6rem;
+}
+
+.resume-item .company::before{
+    content: "";
+    position: absolute;
+    width: 0.8rem;
+    height: 0.8rem;
+    background: var(--secondary-color);
+    border-radius: 50%;
+    left: -1.6rem;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .skills-container {
