--- a/css/styles.css
+++ b/css/styles.css
@@ -582,7 +582,7 @@ section.active {
     position: absolute;
     top: -60%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%) scale(.9);
     font-size: 1.6rem;
     white-space: nowrap;
     padding: .5rem 1rem;
@@ -591,12 +591,60 @@ section.active {
     background: var(--white-color);
     color: var(--bg-color);
     opacity: 0;
-    scale: .9;
     transition: .1s;
 }
 
 .portfolio-box .live-github a:hover span{
     top: -70%;
     opacity: 1;
-    scale: 1;
+    transform: translate(-50%) scale(.9);
+}
+
+ .portfolio-box .portfolio-carousel {
+    width: 100%;
+    height: 45rem;
+    border-radius: 1.5rem;
+
+ }
+
+ .portfolio-carousel .img-slide{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 100%;
+    gap: 2rem;
+    height: inherit;
+    transition: .5s;
+ }
+
+ .portfolio-carousel .img-item{
+    height: inherit;
+
+ }
+
+ .portfolio-carousel .img-item img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
+
+ .portfolio-box .navigation {
+    text-align: right;
+    margin-top: 2rem;
+ }
+
+.portfolio-box .navigation button {
+    display: inline-flex;
+    background: var(--second-bg-color);
+    border: .1rem solid var(--white-color);
+    border-radius: .5rem;
+    padding: .5rem 1rem;
+    font-size: 1.6rem;
+    color: var(--secondary-color);
+    cursor: pointer;
+}
+
+.portforlio-box .navigation .arrow-right {
+    margin-left: 1.5rem;
+ 
 }
